src/styles.css
/* You can add global styles to this file, and also import other style files */
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Roboto Mono';
  src: url("/assets/fonts/RobotoMono-Medium.ttf") format('truetype');
  font-weight: normal;
  font-style: normal;
}

.roboto-mono {
  font-family: 'RobotoMono', sans-serif;
}

.nav-hover a {
  color: #52414C;
  transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1);
}

.nav-hover a:hover {
  color: #EF8A17;
}

